--- a/css/style.css
+++ b/css/style.css
@@ -996,6 +996,7 @@ nav .wrapper .burger .hide {
           align-items: center;
 }
 .sectioncontact .wrapper .box {
+  margin-top: 6em;
   width: 100%;
   height: 75%;
   display: -webkit-box;
@@ -1011,6 +1012,43 @@ nav .wrapper .burger .hide {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.sectioncontact .wrapper .box .contactbox {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 1em;
+}
+.sectioncontact .wrapper .box .contactbox label {
+  font-size: 1.8rem;
+  margin-bottom: 0.2em;
+}
+.sectioncontact .wrapper .box .contactbox input {
+  padding: 0.8em 0.4em;
+  font-size: 1.4rem;
+  border: 0.04em solid var(--color-mediumthree);
+  margin-bottom: 0.4em;
+}
+.sectioncontact .wrapper .box .contactbox p {
+  color: var(--color-other);
+  text-align: center;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+.sectioncontact .wrapper .box .contactbox .textarea {
+  max-width: 100%;
+  min-width: 100%;
+  max-height: 200px;
+  min-height: 200px;
+  font-size: 1.8rem;
+  padding: 0.6em 0.8em;
+  margin-bottom: 0.4em;
+  border: 0.04em solid var(--color-mediumthree);
 }
 .sectioncontact .wrapper .status {
   position: absolute;
