--- a/sass/style.scss
+++ b/sass/style.scss
@@ -668,12 +668,45 @@ nav {
 		flex-direction: column;
 		align-items: center;
 		.box {
+			margin-top: 6em;
 			width: 100%;
 			height: 75%;
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
 			align-items: center;
+			.contactbox {
+				width: 100%;
+				display: flex;
+				flex-direction: column;
+				margin-bottom: 1em;
+				label {
+					font-size: 1.8rem;
+					margin-bottom: 0.2em;
+				}
+				input {
+					padding: 0.8em 0.4em;
+					font-size: 1.4rem;
+					border: 0.04em solid var(--color-mediumthree);
+					margin-bottom: 0.4em;
+				}
+				p {
+					color: var(--color-other);
+					text-align: center;
+					font-size: 1.8rem;
+					font-weight: 700;
+				}
+				.textarea {
+					max-width: 100%;
+					min-width: 100%;
+					max-height: 200px;
+					min-height: 200px;
+					font-size: 1.8rem;
+					padding: 0.6em 0.8em;
+					margin-bottom: 0.4em;
+					border: 0.04em solid var(--color-mediumthree);
+				}
+			}
 		}
 
 		.status {
