added styles on buttons in section contact

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -709,6 +709,17 @@ nav {
 			}
 		}
 
+		.btncontact {
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			button {
+				width: 40%;
+				padding: 0.8em 2em;
+			}
+		}
+
 		.status {
 			position: absolute;
 			top: 0;
