--- a/css/style.css
+++ b/css/style.css
@@ -1050,6 +1050,22 @@ nav .wrapper .burger .hide {
   margin-bottom: 0.4em;
   border: 0.04em solid var(--color-mediumthree);
 }
+.sectioncontact .wrapper .btncontact {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.sectioncontact .wrapper .btncontact button {
+  width: 40%;
+  padding: 0.8em 2em;
+}
 .sectioncontact .wrapper .status {
   position: absolute;
   top: 0;
