--- a/sass/_small.scss
+++ b/sass/_small.scss
@@ -199,4 +199,32 @@
 			}
 		}
 	}
+
+	.sectioncontact {
+		.wrapper {
+			.box {
+				height: 60%;
+				margin-bottom: 2.8em;
+				.contactbox {
+					margin-bottom: 0.4em;
+					label {
+						font-size: 1.4rem;
+					}
+					input {
+						padding: 0.6em 0.4em;
+					}
+					p {
+						font-size: 1.6rem;
+					}
+					.textarea {
+						max-height: 140px;
+						min-height: 140px;
+					}
+				}
+			}
+			.status {
+				top: -5%;
+			}
+		}
+	}
 }
