--- a/sass/_xlarge.scss
+++ b/sass/_xlarge.scss
@@ -124,4 +124,13 @@
 			}
 		}
 	}
+
+	.sectioncontact {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		.wrapper {
+			width: 70%;
+		}
+	}
 }
