--- a/sass/style.scss
+++ b/sass/style.scss
@@ -695,6 +695,10 @@ nav {
 					text-align: center;
 					font-size: 1.8rem;
 					font-weight: 700;
+					visibility: hidden;
+				}
+				.actionerror {
+					visibility: visible;
 				}
 				.textarea {
 					max-width: 100%;
@@ -723,6 +727,8 @@ nav {
 		.status {
 			position: absolute;
 			top: 0;
+			width: 50%;
+			height: 10%;
 			padding: 1em 5em;
 			display: flex;
 			flex-direction: column;
