--- a/sass/style.scss
+++ b/sass/style.scss
@@ -714,6 +714,9 @@ nav {
 				.backgrounderror {
 					background-color: var(--color-othererror);
 				}
+				.backgroundsuccess {
+					background-color: var(--color-lightfourBlend);
+				}
 			}
 		}
 
