change kit closed cards in section teams

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -552,11 +552,11 @@ nav {
 			}
 			.crosscard {
 				position: absolute;
-				font-size: 5rem;
+				font-size: 4rem;
 				top: 2%;
 				right: 2%;
 				cursor: pointer;
-				color: var(--color-darkone);
+				color: var(--color-mediumthree);
 				&:hover {
 					color: var(--color-mediumone);
 				}
