--- a/css/style.css
+++ b/css/style.css
@@ -851,11 +851,11 @@ nav .wrapper .burger .hide {
 }
 .sectionteams .swiper .card .crosscard {
   position: absolute;
-  font-size: 5rem;
+  font-size: 4rem;
   top: 2%;
   right: 2%;
   cursor: pointer;
-  color: var(--color-darkone);
+  color: var(--color-mediumthree);
 }
 .sectionteams .swiper .card .crosscard:hover {
   color: var(--color-mediumone);
