else change colors

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,7 +16,7 @@
 	--color-lightthree: #b1e4ff;
 	--color-lightfour: #90d9ff;
 	--color-lightfourBlend: rgba(144, 216, 255, 0.7);
-	--color-mediumone: #1c2b33;
+	--color-mediumone: #123e51;
 	--color-mediumtwo: #137a7f;
 	--color-mediumthree: #257ca3;
 	--color-darkone: #373b3e;
