--- a/css/style.css
+++ b/css/style.css
@@ -1118,6 +1118,13 @@ nav .wrapper .burger .hide {
   background-color: var(--color-other);
 }
 
+footer {
+  width: 100%;
+  height: 100%;
+  padding: 2em;
+  background-color: var(--color-mediumone);
+}
+
 @media (max-width: 576px) {
   nav .wrapper {
     padding: 0em 1em;
