--- a/sass/style.scss
+++ b/sass/style.scss
@@ -759,6 +759,13 @@ nav {
 	}
 }
 
+footer {
+	width: 100%;
+	height: 100%;
+	padding: 2em;
+	background-color: var(--color-mediumone);
+}
+
 @import './small';
 @import './medium';
 @import './large';
