added year in js for footer

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -832,6 +832,10 @@ footer {
 				font-size: 1.4em;
 				color: var(--color-lighttwo);
 			}
+			.year {
+				color: var(--color-lighttwo);
+				padding-left: 0.2em;
+			}
 		}
 	}
 }
