--- a/css/style.css
+++ b/css/style.css
@@ -1229,6 +1229,10 @@ footer .wrapper .years p {
   font-size: 1.4em;
   color: var(--color-lighttwo);
 }
+footer .wrapper .years .year {
+  color: var(--color-lighttwo);
+  padding-left: 0.2em;
+}
 
 @media (max-width: 576px) {
   nav .wrapper {
