--- a/css/style.css
+++ b/css/style.css
@@ -1444,28 +1444,36 @@ footer .wrapper .years .year {
     width: 100%;
     top: -5%;
   }
+  footer .wrapper .info {
+    width: 100%;
+  }
   footer .wrapper .info__heading {
     font-size: 3.6rem;
     margin-bottom: 0.4em;
   }
   footer .wrapper .info .address {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 1em;
+    border-bottom: 0.02em solid var(--color-lightfour);
+  }
+  footer .wrapper .info .address__box {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    margin-bottom: 0.8em;
   }
-  footer .wrapper .info .address p {
-    padding: 0;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-item-align: start;
-        align-self: flex-start;
+  footer .wrapper .info .address__box p {
+    padding: 0.1em;
   }
   footer .wrapper .info .media {
+    padding-top: 1em;
     width: 100%;
   }
 }
