--- a/sass/_small.scss
+++ b/sass/_small.scss
@@ -232,25 +232,26 @@
 	footer {
 		.wrapper {
 			.info {
+				width: 100%;
 				&__heading {
 					font-size: 3.6rem;
 					margin-bottom: 0.4em;
 				}
 				.address {
-					flex-direction: column;
+					display: flex;
 					justify-content: space-around;
-					margin-bottom: 0.8em;
-					p {
-						// display: flex;
-						padding: 0;
-						align-items: center;
-						align-self: flex-start;
-					}
-					i {
-						// text-align: left;
+					align-items: center;
+					padding-bottom: 1em;
+					border-bottom: 0.02em solid var(--color-lightfour);
+					&__box {
+						flex-direction: column;
+						p {
+							padding: 0.1em;
+						}
 					}
 				}
 				.media {
+					padding-top: 1em;
 					width: 100%;
 				}
 			}
