--- a/sass/_medium.scss
+++ b/sass/_medium.scss
@@ -152,4 +152,18 @@
 			height: 300px;
 		}
 	}
+
+	footer {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		.wrapper {
+			width: 70%;
+			.info {
+				display: flex;
+				flex-direction: row;
+			}
+		}
+	}
 }
