--- a/sass/style.scss
+++ b/sass/style.scss
@@ -771,6 +771,10 @@ footer {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
+		.heading {
+			font-size: 3rem;
+			color: var(--color-lighttwo);
+		}
 		.info {
 			width: 100%;
 			display: flex;
@@ -779,10 +783,6 @@ footer {
 			justify-content: center;
 			border-bottom: 0.04em solid var(--color-lightfour);
 			margin-bottom: 1em;
-			&__heading {
-				font-size: 3rem;
-				color: var(--color-lighttwo);
-			}
 			.address {
 				width: 100%;
 				&__box {
