--- a/sass/_medium.scss
+++ b/sass/_medium.scss
@@ -160,6 +160,9 @@
 		align-items: center;
 		.wrapper {
 			width: 100%;
+			.heading {
+				font-size: 4rem;
+			}
 			.info {
 				width: 70%;
 				display: flex;
