--- a/sass/_xxlarge.scss
+++ b/sass/_xxlarge.scss
@@ -126,4 +126,17 @@
 			}
 		}
 	}
+
+	footer {
+		.wrapper {
+			.info {
+				width: 40%;
+				.media {
+					&__box {
+						width: 70%;
+					}
+				}
+			}
+		}
+	}
 }
