--- a/sass/_medium.scss
+++ b/sass/_medium.scss
@@ -30,8 +30,8 @@
 					font-size: 2rem;
 				}
 				.scrollactive {
-					color: var(--color-mediumtwo);
-					border-bottom: 0.08em solid var(--color-mediumtwo);
+					color: var(--color-mediumone);
+					font-weight: bold;
 				}
 			}
 			.burger {
